fixing 1px overflowing

--- a/inc/css/yoimg-cropping.css
+++ b/inc/css/yoimg-cropping.css
@@ -15,12 +15,6 @@
 	left: 0;
 }
 
-#yoimg-cropper-wrapper .media-frame-router {
-	overflow: hidden;
-	padding-top: 1px;
-	position: relative;
-}
-
 #yoimg-cropper-wrapper .media-frame-router .arrows {
 	border: 0;
     background: none;
